Closed Bug 1835110 Opened 3 years ago Closed 3 years ago

Warnings of potential deadlock in Android font backend

Categories

(Core :: Layout: Text and Fonts, defect)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox-esr102 --- wontfix
firefox113 --- wontfix
firefox114 --- wontfix
firefox115 --- fixed

People

(Reporter: jfkthame, Assigned: jfkthame)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

As noted in bug 1827756 comment 1, we see a number of warnings of a potential deadlock issue in the Android font code:

04-12 21:59:49.331 11661 11676 I Gecko   : [Child 11661, Main Thread] WARNING: Potential deadlock detected:
04-12 21:59:49.331 11661 11676 I Gecko   : Cyclical dependency starts at
04-12 21:59:49.331 11661 11676 I Gecko   : Mutex : gfxFontEntry lock
04-12 21:59:49.331 11661 11676 I Gecko   : Next dependency:
04-12 21:59:49.331 11661 11676 I Gecko   : Mutex : SharedFTFace::mLock (currently acquired)
04-12 21:59:49.331 11661 11676 I Gecko   : Cycle completed at
04-12 21:59:49.331 11661 11676 I Gecko   : Mutex : gfxFontEntry lock
04-12 21:59:49.331 11661 11676 I Gecko   : Deadlock may happen for some other execution

I don't believe our tests are in fact deadlocking there at present -- the timeouts in bug 1827756 must have some other cause -- but the warning is indicating a potential issue that we should fix anyway.

Checking logcat from test runs at
https://treeherder.mozilla.org/jobs?repo=try&revision=fc75475d3cd5dcacbbc74b0c9a58a89ae6c97119
we can see that the "potential deadlock" warning no longer appears.

Assignee: nobody → jfkthame
Status: NEW → ASSIGNED

Set release status flags based on info from the regressing bug 1763414

Pushed by jkew@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/34e423bf5086 Avoid potential deadlock in FT2FontEntry::HasFontTable. r=gfx-reviewers,bradwerth
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch

The patch landed in nightly and beta is affected.
:jfkthame, is this bug important enough to require an uplift?

  • If yes, please nominate the patch for beta approval.
  • If no, please set status-firefox114 to wontfix.

For more information, please visit BugBot documentation.

Flags: needinfo?(jfkthame)

I don't think this needs uplift -- afaict, we were not in fact encountering a deadlock, as noted in comment 0, just logging a warning.

Flags: needinfo?(jfkthame)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: