Bug 1835110 - Avoid potential deadlock in FT2FontEntry::HasFontTable. r=gfx-reviewers,bradwerth

Checking logcat from test runs at
https://treeherder.mozilla.org/jobs?repo=try&revision=fc75475d3cd5dcacbbc74b0c9a58a89ae6c97119
we can see that the "potential deadlock" warning no longer appears.

Differential Revision: https://phabricator.services.mozilla.com/D179118